--- a/src/style/ConnectButtonCustom.scss
+++ b/src/style/ConnectButtonCustom.scss
@@ -11,7 +11,8 @@ button.connect-wallet {
   padding: 20px 50px;
   font-size: 1.2rem;
   border: none;
-  background-color: #246aee;
+  background-color: #202123;
+  border: 1px solid #246aee;
   letter-spacing: 1px;
   border-radius: 15px;
   box-shadow: rgb(42, 35, 207) 0px 4px 24px -6px;
@@ -27,7 +28,8 @@ button.connect-wallet {
 
 button.chain-button {
   margin: auto 10px;
-  background-color: #246aee;
+  background-color: #202123;
+  border: 1px solid #246aee;
   color: white;
   font-weight: 500;
   border: 0px;
@@ -38,7 +40,8 @@ button.chain-button {
 .connect-btn {
   padding: 20px;
   font-size: 1.2rem;
-  background-color: #246aee;
+  background-color: #202123;
+  border: 1px solid #246aee;
   box-shadow: rgb(42, 35, 207) 0px 4px 24px -6px;
   transition: all 200ms ease 0s;
   color: white;
@@ -56,15 +59,17 @@ button.address-balance {
   padding-left: 5px;
   font-size: 0.865rem;
   background-color: none;
-  background-color: #246aee;
+  background-color: #202123;
+  border: 1px solid #246aee;
   color: white;
-  border: 0px;
+
   font-weight: 500;
   border-radius: 10px;
 }
 
 span.account-balance {
-  background-color: #246aee;
+  background-color: #202123;
+
   color: white;
   margin-left: 5px;
   border-radius: 10px;
@@ -86,7 +91,8 @@ button.wrong-network {
   padding: 10px 20px;
   box-shadow: rgb(42, 35, 207) 0px 4px 24px -6px;
   transition: all 200ms ease 0s;
-  background-color: #246aee;
+  background-color: #202123;
+  border: 1px solid #246aee;
   color: white;
   font-weight: 500;
   letter-spacing: 3px;
