--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -95,8 +95,6 @@ input {
   left: 35%;
 }
 
-
-
 input {
   flex: 1 1;
   height: 40px;
@@ -278,6 +276,7 @@ input {
   border-radius: 10px;
   box-shadow: rgb(42, 35, 207) 0px 4px 24px -6px;
   transition: all 200ms ease 0s;
+  cursor: pointer;
 }
 // ..............navbar css...............
 
@@ -367,42 +366,39 @@ input {
 }
 // .....................animation
 
-
-
 //........................loader
 $animationTime: 0.8s;
 $dotSize: 20px;
 
 .loader {
-    text-align: center;
-    
-    span {
-        display: inline-block;
-        vertical-align: middle;
-        width: $dotSize;
-        height: $dotSize;
-        background: rgb(185, 180, 180);
-        border-radius: $dotSize;
-        animation: loader $animationTime infinite alternate;
+  text-align: center;
 
-        &:nth-of-type(2) {
-            animation-delay: 0.2s;
-        }
+  span {
+    display: inline-block;
+    vertical-align: middle;
+    width: $dotSize;
+    height: $dotSize;
+    background: rgb(185, 180, 180);
+    border-radius: $dotSize;
+    animation: loader $animationTime infinite alternate;
 
-        &:nth-of-type(3) {
-            animation-delay: 0.6s;
-        }
+    &:nth-of-type(2) {
+      animation-delay: 0.2s;
     }
+
+    &:nth-of-type(3) {
+      animation-delay: 0.6s;
+    }
+  }
 }
 
 @keyframes loader {
-    0% {
-        opacity: 0.9;
-        transform: scale(0.5);
-    }
-    100% {
-        opacity: 0.1;
-        transform: scale(1);
-    }
+  0% {
+    opacity: 0.9;
+    transform: scale(0.5);
+  }
+  100% {
+    opacity: 0.1;
+    transform: scale(1);
+  }
 }
-
