--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -6,14 +6,15 @@
 
 .message-history {
   width: 260px;
-  padding: 40px 10px;
-  overflow-y: auto;
+  // padding: 40px 10px;
+  padding: 40px 0px 40px 20px;
+  // overflow-y: auto;
   --tw-bg-opacity: 1;
   background-color: #09090b;
 }
 
 .message {
-  margin-bottom: 8px;
+  // margin-bottom: 8px;
   padding: 15px 10px;
   border-bottom: 1px solid lightgray;
   display: flex;
@@ -55,7 +56,7 @@
   justify-content: space-between;
   overflow-y: auto;
   overflow-x: hidden;
-  margin: 20px;
+  margin: 15px;
   border-radius: 30px;
 }
 
@@ -95,6 +96,8 @@ input {
   left: 35%;
 }
 
+
+
 input {
   flex: 1 1;
   height: 40px;
@@ -125,7 +128,14 @@ input {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #1e3747;
 }
+
+.send-btn[disabled] {
+  background-color: #a49b9b; // Disabled color
+  cursor: not-allowed;
+}
+
 .side-menu-button {
   padding: 15px;
   border: 1px solid white;
@@ -276,7 +286,6 @@ input {
   border-radius: 10px;
   box-shadow: rgb(42, 35, 207) 0px 4px 24px -6px;
   transition: all 200ms ease 0s;
-  cursor: pointer;
 }
 // ..............navbar css...............
 
@@ -366,39 +375,86 @@ input {
 }
 // .....................animation
 
+
+
 //........................loader
 $animationTime: 0.8s;
 $dotSize: 20px;
 
 .loader {
-  text-align: center;
+    text-align: center;
+    
+    span {
+        display: inline-block;
+        vertical-align: middle;
+        width: $dotSize;
+        height: $dotSize;
+        background: rgb(185, 180, 180);
+        border-radius: $dotSize;
+        animation: loader $animationTime infinite alternate;
 
-  span {
-    display: inline-block;
-    vertical-align: middle;
-    width: $dotSize;
-    height: $dotSize;
-    background: rgb(185, 180, 180);
-    border-radius: $dotSize;
-    animation: loader $animationTime infinite alternate;
+        &:nth-of-type(2) {
+            animation-delay: 0.2s;
+        }
 
-    &:nth-of-type(2) {
-      animation-delay: 0.2s;
+        &:nth-of-type(3) {
+            animation-delay: 0.6s;
+        }
     }
-
-    &:nth-of-type(3) {
-      animation-delay: 0.6s;
-    }
-  }
 }
 
 @keyframes loader {
-  0% {
-    opacity: 0.9;
-    transform: scale(0.5);
-  }
-  100% {
-    opacity: 0.1;
-    transform: scale(1);
-  }
+    0% {
+        opacity: 0.9;
+        transform: scale(0.5);
+    }
+    100% {
+        opacity: 0.1;
+        transform: scale(1);
+    }
 }
+
+//............................
+
+.chat-history-list{
+  overflow-x: hidden;
+  min-height: 73%;
+  max-height: 73%;
+  background-color: #202123;
+  border-radius: 1rem;
+  justify-content: center;  
+  align-items: center;
+}
+
+
+.no-messages-center {
+  text-align: center;
+  color: white;
+  padding: 20px;  
+}
+
+.exp-cov-class-main{
+  padding: 15px;
+  border: 1px solid white;
+  border-radius: 5px;
+  color: white;
+  text-align: start;
+  cursor: pointer;
+}
+
+
+.side-ex-cov-btn {
+  text-align: start;
+  display: flex;
+  align-items: center;
+  // justify-content: center;
+}
+.exp-cov-class-main:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.side-ex-cov-btn span {
+  padding-left: 6px;
+  padding-right: 12px;
+}
+
+
