--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -15,7 +15,7 @@
 
 .message {
   // margin-bottom: 8px;
-  padding: 15px 10px;
+  padding: 10px 10px;
   border-bottom: 1px solid lightgray;
   display: flex;
   color: white;
@@ -35,6 +35,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  margin-top: 0.3rem;
 }
 .chat-box-main {
   flex: 1;
