--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -61,8 +61,6 @@
   border-radius: 30px;
 }
 
-
-
 // .chat-input {
 //   display: flex;
 //   align-items: center;
@@ -92,7 +90,6 @@
   bottom: 5%;
   left: 35%;
 }
-
 
 input {
   width: 220%;
@@ -172,16 +169,29 @@ input {
 .dash-title {
   text-align: center;
   color: white;
-  height: 13vh;
+  margin: 30px 0px;
+  font-size: 2.3rem;
+}
+.empty-que {
+  border: 1px solid lightgray;
+  padding: 20px;
   display: flex;
   align-items: center;
-  flex-direction: column;
-  justify-content: center;
+  text-align: center;
+  color: white;
+  letter-spacing: 0.7px;
+  justify-content: space-between;
+  border-radius: 10px;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25);
+}
+.empty-que:hover {
+  background-color: #09090b;
 }
 .common-que-flex {
   display: flex;
   align-items: flex-start;
   max-width: 100%;
+  margin-top: 50px;
   color: rgba(245, 240, 240, 0.707);
   width: 100%;
   justify-content: space-around;
@@ -372,65 +382,62 @@ input {
 }
 // .....................animation
 
-
-
 //........................loader
 $animationTime: 0.8s;
 $dotSize: 20px;
 
 .loader {
-    text-align: center;
-    
-    span {
-        display: inline-block;
-        vertical-align: middle;
-        width: $dotSize;
-        height: $dotSize;
-        background: rgb(185, 180, 180);
-        border-radius: $dotSize;
-        animation: loader $animationTime infinite alternate;
+  text-align: center;
 
-        &:nth-of-type(2) {
-            animation-delay: 0.2s;
-        }
+  span {
+    display: inline-block;
+    vertical-align: middle;
+    width: $dotSize;
+    height: $dotSize;
+    background: rgb(185, 180, 180);
+    border-radius: $dotSize;
+    animation: loader $animationTime infinite alternate;
 
-        &:nth-of-type(3) {
-            animation-delay: 0.6s;
-        }
+    &:nth-of-type(2) {
+      animation-delay: 0.2s;
     }
+
+    &:nth-of-type(3) {
+      animation-delay: 0.6s;
+    }
+  }
 }
 
 @keyframes loader {
-    0% {
-        opacity: 0.9;
-        transform: scale(0.5);
-    }
-    100% {
-        opacity: 0.1;
-        transform: scale(1);
-    }
+  0% {
+    opacity: 0.9;
+    transform: scale(0.5);
+  }
+  100% {
+    opacity: 0.1;
+    transform: scale(1);
+  }
 }
 
 //............................
 
-.chat-history-list{
+.chat-history-list {
   overflow-x: hidden;
   min-height: 73%;
   max-height: 73%;
   background-color: #202123;
   border-radius: 1rem;
-  justify-content: center;  
+  justify-content: center;
   align-items: center;
 }
-
 
 .no-messages-center {
   text-align: center;
   color: white;
-  padding: 20px;  
+  padding: 20px;
 }
 
-.exp-cov-class-main{
+.exp-cov-class-main {
   padding: 15px;
   border: 1px solid white;
   border-radius: 5px;
@@ -438,7 +445,6 @@ $dotSize: 20px;
   text-align: start;
   cursor: pointer;
 }
-
 
 .side-ex-cov-btn {
   text-align: start;
@@ -453,5 +459,3 @@ $dotSize: 20px;
   padding-left: 6px;
   padding-right: 12px;
 }
-
-
