--- a/src/style/CovalentAPIs.css
+++ b/src/style/CovalentAPIs.css
@@ -10,14 +10,10 @@
   transition: border-color 0.3s ease;
 }
 
-.input-field.green-border {
-  border-color: green;
-}
-
 /* Network Dropdown */
 .network-dropdown {
   width: calc(33.33% - 10px);
-  padding: 8px;
+  padding: 15px;
   background-color: #202123;
   border: 1px solid lightgray;
   border-radius: 5px;
@@ -37,15 +33,18 @@
 }
 /* Fetch Buttons */
 .fetch-button {
-  padding: 10px 20px;
+  padding: 15px;
   margin: 10px 5px;
-  background-color: #555556;
+  background-color: black;
   color: white;
-  border: none;
+  border: 1px solid white;
   border-radius: 5px;
   cursor: pointer;
 }
 
+.fetch-button:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
 /* Table Container */
 .table-container {
   max-width: 100%;
