--- a/src/style/CovalentAPIs.css
+++ b/src/style/CovalentAPIs.css
@@ -9,6 +9,9 @@
   border-radius: 5px;
   transition: border-color 0.3s ease;
 }
+.input-field.green-border {
+  border-color: #246aee;
+}
 
 /* Network Dropdown */
 .network-dropdown {
@@ -27,8 +30,8 @@
   display: flex;
   flex-direction: column;
   width: 80%;
-  margin: 0 auto;
-  height: auto;
+  margin: 50 auto;
+  height: 50px auto;
   justify-content: flex-end;
 }
 /* Fetch Buttons */
