--- a/src/style/CovalentAPIs.css
+++ b/src/style/CovalentAPIs.css
@@ -30,7 +30,7 @@
   display: flex;
   flex-direction: column;
   width: 80%;
-  margin: 50 auto;
+  margin: 50px auto;
   height: 50px auto;
   justify-content: flex-end;
 }
